--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon server.js",
-    "start": "node server.js",
+    "start": "npx tsx server.js",
     "migrate": "prisma migrate deploy",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm install && (cd frontend && npm install && npm run build)"
@@ -14,11 +14,11 @@
     "@sendgrid/mail": "^8.1.6",
     "@supabase/supabase-js": "^2.78.0",
     "cors": "^2.8.5",
-    "prisma": "^5.x.x",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "geoip-lite": "^1.4.10",
     "nodemailer": "^6.9.14",
+    "prisma": "^5.x.x",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "twilio": "^5.10.1",
@@ -31,6 +31,7 @@
     "@types/react-dom": "^19.1.9",
     "nodemon": "^3.1.10",
     "prisma": "^6.16.2",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.2"
   }
 }
