--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "geoip-lite": "^1.4.10",
+    "googleapis": "^164.1.0",
     "nodemailer": "^6.9.14",
     "prisma": "^5.x.x",
     "react": "^19.1.1",
