--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,10 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "migrate": "npx prisma migrate dev",
+    "generate": "npx prisma generate",
+    "postinstall": "cd frontend && npm install && npm run build"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
