--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^6.16.2",
     "@sendgrid/mail": "^8.1.6",
     "@supabase/supabase-js": "^2.78.0",
+    "axios": "^1.13.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
@@ -22,6 +23,8 @@
     "prisma": "^5.x.x",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "telegraf": "^4.16.3",
+    "telegraf-session-local": "^2.1.1",
     "twilio": "^5.10.1",
     "ua-parser-js": "^2.0.5",
     "vite": "^7.1.7",
@@ -34,5 +37,8 @@
     "prisma": "^6.16.2",
     "tsx": "^4.20.6",
     "typescript": "^5.9.2"
+  },
+  "prisma": {
+    "seed": "npx tsx seed_menu.js"
   }
 }
